--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>First Demo</title>
 </head>
 <body>
-  <div id="div1"> 
+  <!-- 这是一个HTML TAG块 和文字相关的属于inline,div属于block 作为容器容纳别人-->
+    <div id="div1"> 
       Hello Word
   </div>
   
@@ -49,7 +50,9 @@
     <li>CSS</li>
     <li>JAVASCRIPT</li>
 </ol>
+<!-- target="_self" 在原窗口打开网页 -->
 <a href="https://www.google.com/" target="_self">Google Self</a> 
+<!-- target ="_blank" 网页在新窗口打开 -->
 <a href="https://www.google.com/" target="_blank">Google Blank</a> 
 <a href="goto.html" target="_blank">Goto My Html</a>
 
